Fix z-index on web3modal

--- a/src/views/Bond/bond.scss
+++ b/src/views/Bond/bond.scss
@@ -121,3 +121,6 @@
     }
   }
 }
+
+
+.web3modal-modal-lightbox { z-index: 70 !important; }
